Fix address cut off css

--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -121,28 +121,35 @@
     -fx-border-color: transparent;
 }
 
+.table-row-cell:filled:selected {
+  -fx-background: -derive(#828282, 30%);
+  -fx-background-color: derive(#828282, 30%);
+  -fx-background-insets: 0, 0 0 1 0 ;
+  -fx-table-cell-border-color: derive(#828282, 30%);
+}
+
 .table-row-cell:odd {
     -fx-background-color: derive(#E6ECF0, 30%);
     -fx-background-insets: 0, 0 0 1 0;
-    -fx-padding: 0.0em;
+    -fx-padding: 0 0 0 0;
 }
 
 .table-row-cell:odd:hover {
     -fx-background-color: derive(#828282, 80%);
     -fx-background-insets: 0, 0 0 1 0;
-    -fx-padding: 0.0em;
+    -fx-padding: 0 0 0 0;
 }
 
 .table-row-cell:even {
     -fx-background-color: derive(#E6ECF0, 20%);
     -fx-background-insets: 0, 0 0 1 0;
-    -fx-padding: 0.0em;
+    -fx-padding: 0 0 0 0;
 }
 
 .table-row-cell:even:hover {
     -fx-background-color: derive(#828282, 80%);
     -fx-background-insets: 0, 0 0 1 0;
-    -fx-padding: 0.0em;
+    -fx-padding: 0 0 0 0;
 }
 
 .split-pane:horizontal .split-pane-divider {
